fix for smaller devices

--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
                     <label for="option4">Option d</label>
                 </div>
             </div>
-
-            <button type="submit" class="btn" onclick="submitAnswer()">
-                Submit
-            </button>
+            <div class="text-center">
+                <button type="submit" class="btn" onclick="submitAnswer()">
+                    Submit
+                </button>
+            </div>
         </div>
     </div>
 
